--- a/index.html
+++ b/index.html
@@ -13,71 +13,96 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main>
+    <section>
+      
+  <h1>A history of everything you copy</h1>
+  <p>
+    Clipboard allows you to track and organize everything you
+    copy. Instantly access your clipboard on all your devices.
+  </p>
 
-  A history of everything you copy
+  <button>Download for iOS</button>
+  <button>Download for Mac</button>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+  <h2>Keep track of your snippets</h2>
 
-  Download for iOS
-  Download for Mac
+  <p>
+    Clipboard instantly stores any item you copy in the cloud,
+    meaning you can access your snippets immediately on all your
+    devices. Our Mac and iOS apps will help you organize everything.
+  </p>
 
-  Keep track of your snippets
+  <h3>Quick Search</h3>
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  <p>
+    Easily search your snippets by content, category, web address, application, and more.
+  </p>
 
-  Quick Search
+  <h3>iCloud Sync</h3>
 
-  Easily search your snippets by content, category, web address, application, and more.
+  <p>
+    Instantly saves and syncs snippets across all your devices.
+  </p>
 
-  iCloud Sync
+  <h3>Complete History</h3>
 
-  Instantly saves and syncs snippets across all your devices.
+  <p>
+    Retrieve any snippets from the first moment you started using the app.
+  </p>
 
-  Complete History
+  <h2>Access Clipboard anywhere</h2>
 
-  Retrieve any snippets from the first moment you started using the app.
+  <p>
+    Whether you’re on the go, or at your computer, you can access all your Clipboard
+    snippets in a few simple clicks.
+  </p>
 
-  Access Clipboard anywhere
+  <h2>Supercharge your workflow</h2>
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
+  <p>
+    We’ve got the tools to boost your productivity.
+  </p>
 
-  Supercharge your workflow
+  <h3>Create blacklists</h3>
 
-  We’ve got the tools to boost your productivity.
+  <p>
+    Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+  </p>
 
-  Create blacklists
+  <h3>Plain text snippets</h3>
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+  <p>
+    Remove unwanted formatting from copied text for a consistent look.
+  </p>
 
-  Plain text snippets
+  <h3>Sneak preview</h3>
 
-  Remove unwanted formatting from copied text for a consistent look.
+  <p>
+    Quick preview of all snippets on your Clipboard for easy access.
+  </p>
 
-  Sneak preview
+  <h2>Clipboard for iOS and Mac OS</h2>
 
-  Quick preview of all snippets on your Clipboard for easy access.
+  <p>
+    Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+    and you’re ready to start adding to your clipboard.
+  </p>
 
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
+  <button>Download for iOS</button>
+  <button>Download for Mac</button>
+    </section>
+  </main>
+  <footer>
   FAQs
   Contact Us
   Privacy Policy
   Press Kit
   Install Guide
   
-  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
