--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Clipboard landing page</title>
 
@@ -25,8 +29,8 @@
     copy. Instantly access your clipboard on all your devices.
   </p>
 
-  <button>Download for iOS</button>
-  <button>Download for Mac</button>
+  <button class="button button--download-ios">Download for iOS</button>
+  <button class="button button--download-mac">Download for Mac</button>
 
   <h2>Keep track of your snippets</h2>
 
@@ -92,8 +96,8 @@
     and you’re ready to start adding to your clipboard.
   </p>
 
-  <button>Download for iOS</button>
-  <button>Download for Mac</button>
+  <button class="button button--download-ios">Download for iOS</button>
+  <button class="button button--download-mac">Download for Mac</button>
     </section>
   </main>
   <footer>
