--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <main>
     <section>
-      
+      <img id="main-logo" src="./images/logo.svg">
       <h1>A history of everything you copy</h1>
       <p>
         Clipboard allows you to track and organize everything you
@@ -64,6 +64,9 @@
         Whether you’re on the go, or at your computer, you can access all your Clipboard
         snippets in a few simple clicks.
       </p>
+
+
+      <img class="image-devices" src="./images/image-devices.png">
 
       <h2>Supercharge your workflow</h2>
 
