--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <main>
-    <section>
-      <img id="main-logo" src="./images/logo.svg">
+    <img id="main-logo" src="./images/logo.svg" alt="main logo">
+    <section class="section--main-width">
       <h1>A history of everything you copy</h1>
       <p>
         Clipboard allows you to track and organize everything you
@@ -39,6 +39,8 @@
         meaning you can access your snippets immediately on all your
         devices. Our Mac and iOS apps will help you organize everything.
       </p>
+    </section>
+    <section>
 
       <h3>Quick Search</h3>
 
@@ -57,6 +59,8 @@
       <p>
         Retrieve any snippets from the first moment you started using the app.
       </p>
+    </section>
+    <section class="section--main-width">
 
       <h2>Access Clipboard anywhere</h2>
 
@@ -66,7 +70,9 @@
       </p>
 
 
-      <img class="image-devices" src="./images/image-devices.png">
+      <img class="image-devices" src="./images/image-devices.png" alt="some devices">
+    </section>
+    <section>
 
       <h2>Supercharge your workflow</h2>
 
