snippers and collaborators grid

--- a/index.html
+++ b/index.html
@@ -43,26 +43,31 @@
         devices. Our Mac and iOS apps will help you organize everything.
       </p>
     </section>
-    <section id="">
+    <section class="section--snippets" id="">
 
-      <img src="./images/image-computer.png" alt="computer">
-      <h3>Quick Search</h3>
+      <div>
+        <img src="./images/image-computer.png" alt="computer">
+      </div>
 
-      <p>
-        Easily search your snippets by content, category, web address, application, and more.
-      </p>
+      <div class="div--snippets-right-side">
+        <h3>Quick Search</h3>
 
-      <h3>iCloud Sync</h3>
+        <p>
+          Easily search your snippets by content, category, web address, application, and more.
+        </p>
 
-      <p>
-        Instantly saves and syncs snippets across all your devices.
-      </p>
+        <h3>iCloud Sync</h3>
 
-      <h3>Complete History</h3>
+        <p>
+          Instantly saves and syncs snippets across all your devices.
+        </p>
 
-      <p>
-        Retrieve any snippets from the first moment you started using the app.
-      </p>
+        <h3>Complete History</h3>
+
+        <p>
+          Retrieve any snippets from the first moment you started using the app.
+        </p>
+      </div>
     </section>
     <section class="section--main-width">
 
@@ -84,8 +89,8 @@
       <p>
         We’ve got the tools to boost your productivity.
       </p>
-      <div class="row">
-        <div class="column">
+      <div class="productivity-tools">
+        <div class="productivity-tools--column">
           <div class="img--small-svg">
             <img src="./images/icon-blacklist.svg" alt="blacklist">
           </div>
@@ -96,7 +101,7 @@
           </p>
         </div>
         
-        <div class="column">
+        <div class="productivity-tools--column">
           <div class="img--small-svg">
             <img src="./images/icon-text.svg" alt="text">
           </div>
@@ -107,7 +112,7 @@
           </p>
         </div>
         
-        <div class="column">
+        <div class="productivity-tools--column">
           <div class="img--small-svg">
             <img src="./images/icon-preview.svg" alt="preview">
           </div>
@@ -117,6 +122,16 @@
             Quick preview of all snippets on your Clipboard for easy access.
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="section--wider">
+      <div class="div--collaborators">
+        <img class="img--collaborators-logo" src="./images/logo-google.png" alt="logo-google">
+        <img class="img--collaborators-logo" src="./images/logo-ibm.png" alt="logo-ibm">
+        <img class="img--collaborators-logo" src="./images/logo-microsoft.png" alt="logo-microsoft">
+        <img class="img--collaborators-logo" src="./images/logo-hp.png" alt="logo-hp">
+        <img class="img--collaborators-logo" src="./images/logo-vector-graphics.png" alt="logo-vector-graphics">
       </div>
     </section>
 
