--- a/index.html
+++ b/index.html
@@ -149,16 +149,23 @@
     </section>
   </main>
   <footer>
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <section class="section--main-width footer--section">
+      <div class="footer--div--logo">
+        <img src="./images/logo.svg" alt="logo">
+      </div>
+      <div class="footer--div--menu">
+        <span class="footer--span">FAQs</span>
+        <span class="footer--span">Contact Us</span>
+        <span class="footer--span">Privacy Policy</span>
+        <span class="footer--span">Press Kit</span>
+        <span class="footer--span">Install Guide</span>
+      </div>
+      <div class="footer--div--social-network">
+        <img src="./images/icon-facebook.svg" alt="facebook">
+        <img src="./images/icon-twitter.svg" alt="twitter">
+        <img src="./images/icon-instagram.svg" alt="instagram">
+      </div>
+  </section>
   </footer>
 </body>
 </html>
